--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Fundamentals Palace</title>
 </head>
 <body>
-    
+<h1>The Web Fundamentals Palace</h1>
+<p>Hover over the family members below and take a peak into the lives of those living at Web Fundamentals Palace.</p> 
+
+<h2>King Kieran</h2>
+<p>My name is Kieran and I am the king. I like karate and kitesurfing. My son Peter is the heir to the throne.</p>
 </body>
 </html>
