--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 
 <h2>King Kieran</h2>
 <p>My name is Kieran and I am the king. I like karate and kitesurfing. My son Peter is the heir to the throne.</p>
+
+<h3>Queen Queenie</h3>
+<p>My name is Queenie and I am the Queen. I like quizzes and quiche. Click here to see my favorite quiche recipe.</p>
+
+<h4>Prince Peter</h4>
+<p>My name is Peter the Prince. I like posing and pizza! Follow me on instagram @pengprincepeter.</p>
 </body>
 </html>
