--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
 
 <h4>Prince Peter</h4>
 <p>My name is Peter the Prince. I like posing and pizza! Follow me on instagram @pengprincepeter.</p>
+
+<h5>Princess Penelope</h5>
+<p>My name is Princess Penelope. I like lots of things...</p>
+<ul>
+    <li>Pencils</li>
+    <li>Peanut Butter</li>
+    <li>Ponies</li>
+    <li>Pogo sticks</li>
+</ul>
 </body>
 </html>
