--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <p>Hover over the family members below and take a peak into the lives of those living at Web Fundamentals Palace.</p> 
 
 <h2>King Kieran</h2>
+<img src="./images/king.jpeg">
 <p>My name is Kieran and I am the king. I like karate and kitesurfing. My son Peter is the heir to the throne.</p>
 
 <h3>Queen Queenie</h3>
