--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h3>Queen Queenie</h3>
 <img src="./images/queen.jpeg" alt="Queen Queenie">
-<p>My name is Queenie and I am the Queen. I like quizzes and quiche. Click here to see my favorite quiche recipe.</p>
+<p>My name is Queenie and I am the Queen. I like quizzes and quiche. Click <a href="https://www.bbc.co.uk/food/recipes/quichelorraine_71987">here</a> to see my favorite quiche recipe.</p>
 
 <h4>Prince Peter</h4>
 <img src="./images/prince-peter.jpeg" alt="Prince Peter">
