--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <h2>King Kieran</h2>
 <img src="./images/king.jpeg" alt="King Kieran">
-<p>My name is Kieran and I am the king. I like karate and kitesurfing. My son Peter is the heir to the throne.</p>
+<p>My name is Kieran and I am the king. I like karate and kitesurfing. My son <a href="#peter">Peter</a> is the heir to the throne.</p>
 
 <h3>Queen Queenie</h3>
 <img src="./images/queen.jpeg" alt="Queen Queenie">
 <p>My name is Queenie and I am the Queen. I like quizzes and quiche. Click <a href="https://www.bbc.co.uk/food/recipes/quichelorraine_71987">here</a> to see my favorite quiche recipe.</p>
 
-<h4>Prince Peter</h4>
+<h4 id="peter">Prince Peter</h4>
 <img src="./images/prince-peter.jpeg" alt="Prince Peter">
 <p>My name is Peter the Prince. I like posing and pizza! Follow me on instagram @pengprincepeter.</p>
 
