--- a/index.html
+++ b/index.html
@@ -7,34 +7,40 @@
     <title>Web Fundamentals Palace</title>
 </head>
 <body>
-<h1>The Web Fundamentals Palace</h1>
-<p>Hover over the family members below and take a peak into the lives of those living at Web Fundamentals Palace.</p> 
 
-<h2>King Kieran</h2>
-<img src="./images/king.jpeg" alt="King Kieran">
-<p>My name is Kieran and I am the king. I like karate and kitesurfing. My son <a href="#peter">Peter</a> is the heir to the throne.</p>
+    <header>
+        <h1>The Web Fundamentals Palace</h1>
+        <p>Hover over the family members below and take a peak into the lives of those living at Web Fundamentals Palace.</p> 
+    </header>
 
-<h3>Queen Queenie</h3>
-<img src="./images/queen.jpeg" alt="Queen Queenie">
-<p>My name is Queenie and I am the Queen. I like quizzes and quiche. Click <a href="https://www.bbc.co.uk/food/recipes/quichelorraine_71987">here</a> to see my favorite quiche recipe.</p>
+    <main>
 
-<h4 id="peter">Prince Peter</h4>
-<img src="./images/prince-peter.jpeg" alt="Prince Peter">
-<p>My name is Peter the Prince. I like posing and pizza! Follow me on instagram @pengprincepeter.</p>
+    
+        <h2>King Kieran</h2>
+        <img src="./images/king.jpeg" alt="King Kieran">
+        <p>My name is Kieran and I am the king. I like karate and kitesurfing. My son <a href="#peter">Peter</a> is the heir to the throne.</p>
 
-<h5>Princess Penelope</h5>
-<img src="./images/princess-penelope.jpeg" alt="Princess Penelope">
-<p>My name is Princess Penelope. I like lots of things...</p>
-<ul>
-    <li>Pencils</li>
-    <li>Peanut Butter</li>
-    <li>Ponies</li>
-    <li>Pogo sticks</li>
-</ul>
+        <h3>Queen Queenie</h3>
+        <img src="./images/queen.jpeg" alt="Queen Queenie">
+        <p>My name is Queenie and I am the Queen. I like quizzes and quiche. Click <a href="https://www.bbc.co.uk/food/recipes/quichelorraine_71987">here</a> to see my favorite quiche recipe.</p>
 
-<h6>Susan</h6>
-<img src="./images/susan.jpeg" alt="Susan">
-<p>I am King Kieran's Mistress and Mother to the illigitimate Princess Penelope</p>
+        <h4 id="peter">Prince Peter</h4>
+        <img src="./images/prince-peter.jpeg" alt="Prince Peter">
+        <p>My name is Peter the Prince. I like posing and pizza! Follow me on instagram @pengprincepeter.</p>
 
+        <h5>Princess Penelope</h5>
+        <img src="./images/princess-penelope.jpeg" alt="Princess Penelope">
+        <p>My name is Princess Penelope. I like lots of things...</p>
+        <ul>
+            <li>Pencils</li>
+            <li>Peanut Butter</li>
+            <li>Ponies</li>
+            <li>Pogo sticks</li>
+        </ul>
+
+        <h6>Susan</h6>
+        <img src="./images/susan.jpeg" alt="Susan">
+        <p>I am King Kieran's Mistress and Mother to the illigitimate Princess Penelope</p>
+    </main>
 </body>
 </html>
