--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- My header section containing title, and paragraph. -->
-    <header>
+    <header id="Top">
       <h1>The Web Fundamentals Palace</h1>
       <p>
         Hover over the family members below and take a peak into the lives of
@@ -27,11 +27,11 @@
       <h3>Queen Queenie</h3>
       <img src="./images/queen.jpeg" alt="Queen Queenie" />
       <p>
-        My name is Queenie and I am the Queen. I like quizzes and quiche. Click
-        <a href="https://www.bbc.co.uk/food/recipes/quichelorraine_71987"
-          >here</a
+        My name is Queenie and I am the Queen. I like quizzes and quesadillas. Click
+        <a href="https://www.simplyrecipes.com/recipes/quesadilla/" target="_blank"
+           >here</a
         >
-        to see my favorite quiche recipe.
+        to see my favorite quesadilla recipe.
       </p>
 
       <h4 id="peter">Prince Peter</h4>
