Challenge 1: Added footer with return to top func.

--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
         Penelope
       </p>
     </main>
+    <footer>
+        <p>Click <a href="#Top">HERE</a> to return to the top of the page.</p>
+    </footer>
   </body>
 </html>
