--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- My header section containing title, and paragraph. -->
     <header id="Top">
-      <h1>The Web Fundamentals Palace</h1>
+      <h1 style="color:red;">The Web Fundamentals Palace</h1>
       <p>
         Hover over the family members below and take a peak into the lives of
         those living at Web Fundamentals Palace.
