--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Fundamentals Palace</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- My header section containing title, and paragraph. -->
     <header id="Top">
-      <h1 style="color:red;">The Web Fundamentals Palace</h1>
+      <h1>The Web Fundamentals Palace</h1>
       <p>
         Hover over the family members below and take a peak into the lives of
         those living at Web Fundamentals Palace.
