--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Fundamentals Palace</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- My header section containing title, and paragraph. -->
@@ -17,50 +17,64 @@
       </p>
     </header>
     <!-- My main content with each member of the family tree. -->
+
     <main>
-      <h2>King Kieran</h2>
-      <img src="./images/king.jpeg" alt="King Kieran" />
-      <p>
-        My name is Kieran and I am the king. I like karate and kitesurfing. My
-        son <a href="#peter">Peter</a> is the heir to the throne.
-      </p>
+      <div class="card">
+        <h2>King Kieran</h2>
+        <img src="./images/king.jpeg" alt="King Kieran" />
+        <p>
+          My name is Kieran and I am the king. I like karate and kitesurfing. My
+          son <a href="#peter">Peter</a> is the heir to the throne.
+        </p>
+      </div>
 
-      <h3>Queen Queenie</h3>
-      <img src="./images/queen.jpeg" alt="Queen Queenie" />
-      <p>
-        My name is Queenie and I am the Queen. I like quizzes and quesadillas. Click
-        <a href="https://www.simplyrecipes.com/recipes/quesadilla/" target="_blank"
-           >here</a
-        >
-        to see my favorite quesadilla recipe.
-      </p>
+      <div class="card">
+        <h3>Queen Queenie</h3>
+        <img src="./images/queen.jpeg" alt="Queen Queenie" />
+        <p>
+          My name is Queenie and I am the Queen. I like quizzes and quesadillas.
+          Click
+          <a
+            href="https://www.simplyrecipes.com/recipes/quesadilla/"
+            target="_blank"
+            >here</a
+          >
+          to see my favorite quesadilla recipe.
+        </p>
+      </div>
 
-      <h4 id="peter">Prince Peter</h4>
-      <img src="./images/prince-peter.jpeg" alt="Prince Peter" />
-      <p>
-        My name is Peter the Prince. I like posing and pizza! Follow me on
-        instagram @pengprincepeter.
-      </p>
+      <div class="card">
+        <h4 id="peter">Prince Peter</h4>
+        <img src="./images/prince-peter.jpeg" alt="Prince Peter" />
+        <p>
+          My name is Peter the Prince. I like posing and pizza! Follow me on
+          instagram @pengprincepeter.
+        </p>
+      </div>
 
-      <h5>Princess Penelope</h5>
-      <img src="./images/princess-penelope.jpeg" alt="Princess Penelope" />
-      <p>My name is Princess Penelope. I like lots of things...</p>
-      <ul>
-        <li>Pencils</li>
-        <li>Peanut Butter</li>
-        <li>Ponies</li>
-        <li>Pogo sticks</li>
-      </ul>
+      <div class="card">
+        <h5>Princess Penelope</h5>
+        <img src="./images/princess-penelope.jpeg" alt="Princess Penelope" />
+        <p>My name is Princess Penelope. I like lots of things...</p>
+        <ul>
+          <li>Pencils</li>
+          <li>Peanut Butter</li>
+          <li>Ponies</li>
+          <li>Pogo sticks</li>
+        </ul>
+      </div>
 
-      <h6>Susan</h6>
-      <img src="./images/susan.jpeg" alt="Susan" />
-      <p>
-        I am King Kieran's Mistress and Mother to the illigitimate Princess
-        Penelope
-      </p>
+      <div class="card">
+        <h6>Susan</h6>
+        <img src="./images/susan.jpeg" alt="Susan" />
+        <p>
+          I am King Kieran's Mistress and Mother to the illigitimate Princess
+          Penelope
+        </p>
+      </div>
     </main>
     <footer>
-        <p>Click <a href="#Top">HERE</a> to return to the top of the page.</p>
+      <p>Click <a href="#Top">HERE</a> to return to the top of the page.</p>
     </footer>
   </body>
 </html>
