--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h5>Princess Penelope</h5>
         <img src="./images/princess-penelope.jpeg" alt="Princess Penelope" />
         <p>My name is Princess Penelope. I like lots of things...</p>
-        <ul>
+        <ul id="penelope-list">
           <li>Pencils</li>
           <li>Peanut Butter</li>
           <li>Ponies</li>
