Added insta font color and size change.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="./images/prince-peter.jpeg" alt="Prince Peter" />
         <p>
           My name is Peter the Prince. I like posing and pizza! Follow me on
-          instagram @pengprincepeter.
+          instagram <span id="peter-insta">@pengprincepeter.</span>
         </p>
       </div>
 
