--- a/flex_challenge_1/index.html
+++ b/flex_challenge_1/index.html
@@ -5,28 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge 1</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div>
-        <h1>_Nology</h1>
+    <header class="headl">
+        <div id="Nology" class="link">
+        <h1>_nology</h1>
         </div>
 
-        <div>
+        <div class="link">
             <p>Link #1</p>
         </div>
 
-        <div>
+        <div class="link">
             <p>Link #2</p>
         </div>
 
-        <div>
+        <div class="link">
             <p>Link #3</p>
         </div>
     </header>
     
     <main>
-        <div>
+        <div class="panel">
             <h2>Panel #1</h2>
             <ul>
                 <li>Lorem ipsum listern itum</li>
@@ -35,7 +40,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="panel">
             <h2>Panel #2</h2>
             <ul>
                 <li>Lorem ipsum listern itum</li>
@@ -44,7 +49,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="panel">
             <h2>Panel #3</h2>
             <ul>
                 <li>Lorem ipsum listern itum</li>
@@ -53,9 +58,9 @@
             </ul>
         </div>
 
-        <div>
+        <div id="rpanel">
             <h2>Right-hand panel</h2>
-            <p>EXAMPLE TEXT EXAMPLE TEXT.</p>
+            <p id="ptext">EXAMPLE TEXT EXAMPLE TEXT.</p>
         </div>
     </main>
 </body>
