--- a/flex_challenge_1/index.html
+++ b/flex_challenge_1/index.html
@@ -12,52 +12,47 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="headl">
-        <div id="Nology" class="link">
+    <header>
+        <div id="Nology">
         <h1>_nology</h1>
         </div>
 
-        <div class="link">
-            <p>Link #1</p>
-        </div>
-
-        <div class="link">
-            <p>Link #2</p>
-        </div>
-
-        <div class="link">
-            <p>Link #3</p>
+        <div id="link">
+            <a href="#">Link #1</a>
+            <a href="#">Link #2</a>
+            <a href="#">Link #3</a>
         </div>
     </header>
     
     <main>
-        <div class="panel">
-            <h2>Panel #1</h2>
-            <ul>
-                <li>Lorem ipsum listern itum</li>
-                <li>Lorem ipsum listern itum</li>
-                <li>Lorem ipsum listern itum</li>
-            </ul>
-        </div>
+        <div id="left">
+            <div class="panel">
+                <h2>Panel #1</h2>
+                <ul>
+                    <li>Lorem ipsum listern itum</li>
+                    <li>Lorem ipsum listern itum</li>
+                    <li>Lorem ipsum listern itum</li>
+                </ul>
+            </div>
 
-        <div class="panel">
-            <h2>Panel #2</h2>
-            <ul>
-                <li>Lorem ipsum listern itum</li>
-                <li>Lorem ipsum listern itum</li>
-                <li>Lorem ipsum listern itum</li>
-            </ul>
-        </div>
+            <div class="panel">
+                <h2>Panel #2</h2>
+                <ul>
+                    <li>Lorem ipsum listern itum</li>
+                    <li>Lorem ipsum listern itum</li>
+                    <li>Lorem ipsum listern itum</li>
+                </ul>
+            </div>
 
-        <div class="panel">
-            <h2>Panel #3</h2>
-            <ul>
-                <li>Lorem ipsum listern itum</li>
-                <li>Lorem ipsum listern itum</li>
-                <li>Lorem ipsum listern itum</li>
-            </ul>
+            <div class="panel">
+                <h2>Panel #3</h2>
+                <ul>
+                    <li>Lorem ipsum listern itum</li>
+                    <li>Lorem ipsum listern itum</li>
+                    <li>Lorem ipsum listern itum</li>
+                </ul>
+            </div>
         </div>
-
         <div id="rpanel">
             <h2>Right-hand panel</h2>
             <p id="ptext">EXAMPLE TEXT EXAMPLE TEXT.</p>
