--- a/flex_challenge_1/index.html
+++ b/flex_challenge_1/index.html
@@ -18,9 +18,11 @@
         </div>
 
         <div id="link">
-            <a href="#">Link #1</a>
-            <a href="#">Link #2</a>
-            <a href="#">Link #3</a>
+            <ul>
+                <li class="list1"><a href="#">Link #1</a></li>
+                <li class="list1"><a href="#">Link #2</a></li>
+                <li class="list1"><a href="#">Link #3</a></li>
+            </ul>
         </div>
     </header>
     
