--- a/flex_challenge_1/index.html
+++ b/flex_challenge_1/index.html
@@ -1,64 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge 1</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <div id="Nology">
+      <div id="Nology">
         <h1>_nology</h1>
-        </div>
+      </div>
 
-        <div id="link">
-            <ul>
-                <li class="list1"><a href="#">Link #1</a></li>
-                <li class="list1"><a href="#">Link #2</a></li>
-                <li class="list1"><a href="#">Link #3</a></li>
-            </ul>
-        </div>
+      <div id="link">
+        <ul>
+          <li class="list1"><a href="#">Link #1</a></li>
+          <li class="list1"><a href="#">Link #2</a></li>
+          <li class="list1"><a href="#">Link #3</a></li>
+        </ul>
+      </div>
     </header>
-    
+
     <main>
-        <div id="left">
-            <div class="panel">
-                <h2>Panel #1</h2>
-                <ul>
-                    <li>Lorem ipsum listern itum</li>
-                    <li>Lorem ipsum listern itum</li>
-                    <li>Lorem ipsum listern itum</li>
-                </ul>
-            </div>
-
-            <div class="panel">
-                <h2>Panel #2</h2>
-                <ul>
-                    <li>Lorem ipsum listern itum</li>
-                    <li>Lorem ipsum listern itum</li>
-                    <li>Lorem ipsum listern itum</li>
-                </ul>
-            </div>
-
-            <div class="panel">
-                <h2>Panel #3</h2>
-                <ul>
-                    <li>Lorem ipsum listern itum</li>
-                    <li>Lorem ipsum listern itum</li>
-                    <li>Lorem ipsum listern itum</li>
-                </ul>
-            </div>
+      <div id="left">
+        <div class="panel">
+          <h2>Panel #1</h2>
+          <ul>
+            <li>Lorem ipsum listern itum</li>
+            <li>Lorem ipsum listern itum</li>
+            <li>Lorem ipsum listern itum</li>
+          </ul>
         </div>
-        <div id="rpanel">
-            <h2>Right-hand panel</h2>
-            <p id="ptext">dis parturient montes, nascetur ridiculus mus. Praesent imperdiet in nibh a sodales. Vivamus tristique nisl quis nunc posuere tempus. Nam molestie, nisi sit amet condimentum scelerisque, lectus ante feugiat justo, at semper odio erat vulputate quam. Etiam ornare, ante faucibus sodales pulvinar, eros massa feugiat leo, ac suscipit tellus mi a nisl. Vivamus est felis, condimentum vel velit a, efficitur blandit diam. Donec semper lectus eu condimentum fermentum. Integer sagittis urna faucibus magna vestibulum, eu vestibulum quam hendrerit. Donec mollis, nisi varius feugiat maximus, enim magna convallis leo, vel tincidunt urna nulla eget justo. Nam nec sapien a ligula consequat commodo. Nam vehicula lacinia nunc, at varius libero. Phasellus mauris metus, vestibulum at rutrum in, gravida ut neque. Fusce pharetra nibh ac blandit lacinia. Nam vehicula lacinia nunc, at varius libero. Phasellus mauris metus, vestibulum at rutrum in, gravida ut neque. Fusce pharetra nibh ac blandit lacinia.</p>
+
+        <div class="panel">
+          <h2>Panel #2</h2>
+          <ul>
+            <li>Lorem ipsum listern itum</li>
+            <li>Lorem ipsum listern itum</li>
+            <li>Lorem ipsum listern itum</li>
+          </ul>
         </div>
+
+        <div class="panel">
+          <h2>Panel #3</h2>
+          <ul>
+            <li>Lorem ipsum listern itum</li>
+            <li>Lorem ipsum listern itum</li>
+            <li>Lorem ipsum listern itum</li>
+          </ul>
+        </div>
+      </div>
+      <div id="rpanel">
+        <h2>Right-hand panel</h2>
+        <p id="ptext">
+          dis parturient montes, nascetur ridiculus mus. Praesent imperdiet in
+          nibh a sodales. Vivamus tristique nisl quis nunc posuere tempus. Nam
+          molestie, nisi sit amet condimentum scelerisque, lectus ante feugiat
+          justo, at semper odio erat vulputate quam. Etiam ornare, ante faucibus
+          sodales pulvinar, eros massa feugiat leo, ac suscipit tellus mi a
+          nisl. Vivamus est felis, condimentum vel velit a, efficitur blandit
+          diam. Donec semper lectus eu condimentum fermentum. Integer sagittis
+          urna faucibus magna vestibulum, eu vestibulum quam hendrerit. Donec
+          mollis, nisi varius feugiat maximus, enim magna convallis leo, vel
+          tincidunt urna nulla eget justo. Nam nec sapien a ligula consequat
+          commodo. Nam vehicula lacinia nunc, at varius libero. Phasellus mauris
+          metus, vestibulum at rutrum in, gravida ut neque. Fusce pharetra nibh
+          ac blandit lacinia. Nam vehicula lacinia nunc, at varius libero.
+          Phasellus mauris metus, vestibulum at rutrum in, gravida ut neque.
+          Fusce pharetra nibh ac blandit lacinia.
+        </p>
+      </div>
     </main>
-</body>
+  </body>
 </html>
