--- a/sandbox/sass-bem/index.html
+++ b/sandbox/sass-bem/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <nav>
+        <h1>My Site</h1>
+
+        <a href="#">login</a>
+    </nav>
+<main>
+    <h2>Hello</h2>
+    <h3>Welcome to my website</h3>
+    <a href="#">scroll</a>
+</main>
+
+
+
 </body>
 </html>
