Follow Along part 1 Html reworked

--- a/sandbox/sass-bem/index.html
+++ b/sandbox/sass-bem/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <nav>
-        <h1>My Site</h1>
+        <a href="#">My Website</a>
 
         <a href="#">login</a>
     </nav>
-<main>
-    <h2>Hello</h2>
-    <h3>Welcome to my website</h3>
-    <a href="#">scroll</a>
-</main>
+<header>
+    <div>
+        <h1>Hello</h1>
+        <h2>Welcome to my website</h2>
+        <a href="#">scroll</a>
+    </div>
+</header>
 
 
 
