--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <h1>DADA</h1>
+
+        <a href="#" id="login">Login</a>
+    </nav>
+
+    <main>
+        <div>
+            <h2>A parenting coach in your pocket</h2>
+
+            <img src="images/device mockup 1.svg" alt="Device Mockup">
+
+            <h3>Most parenting resources are built with moms in mind.</h3>
+
+            <h2>We've created one for you, Dad!</h4>
+
+            <p>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</p>
+
+            <a href="#" class="button">Get Dadvice</a>
+
+            <h3>Here you will find:</h3>
+        </div>
+
+        <div>
+            <p><span class="find-start">Low effort activity ideas</span> to suit your mood and budget</p>
+            <img src="images/penguin1.svg" alt="Penguin With Lightbulb">
+            <img src="images/penguin2.svg" alt="Frustrated Penguin">
+            <p><span class="find-start">Fast and clear answers</span> to most common parenting challenges.</p>
+            <p><span class="find-start">Cliff-notes</span> from top rated parenting books <span id="find-it">(because who has the time to read the whole thing?)</span></p>
+            <img src="images/penguin3.svg" alt="Penguin Reading A Book">
+            <img src="images/penguin4.svg" alt="Penguin Lifting">
+            <p><span class="find-start">Longer reads</span> for the SuperDads out there</p>
+        </div>
+
+        <a href="#" class="button">Sign Up</a>
+    </main>
     
+    <footer>
+        <h4>Contact Us</h4>
+        <h4>Privacy</h4>
+        <h4>Terms</h4>
+    </footer>
 </body>
 </html>
