Added secondary color set up button styles

--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -15,14 +15,14 @@
     </nav>
 
     <main>
-        <div>
+        <div id="t-line">
             <h2>A parenting coach in your pocket</h2>
 
-            <img src="images/device mockup 1.svg" alt="Device Mockup">
+            <img src="images/device mockup 1.svg" alt="Device Mockup" id="mockup">
 
             <h3>Most parenting resources are built with moms in mind.</h3>
 
-            <h2>We've created one for you, Dad!</h4>
+            <h2 id="s-blue">We've created one for you, Dad!</h4>
 
             <p>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</p>
 
