HEre You Will Find section completed

--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -28,18 +28,26 @@
 
             <a href="#" class="button">Get Dadvice</a>
 
-            <h3>Here you will find:</h3>
+            <h3 id="here-find">Here you will find:</h3>
         </div>
 
-        <div>
-            <p><span class="find-start">Low effort activity ideas</span> to suit your mood and budget</p>
-            <img src="images/penguin1.svg" alt="Penguin With Lightbulb">
-            <img src="images/penguin2.svg" alt="Frustrated Penguin">
-            <p><span class="find-start">Fast and clear answers</span> to most common parenting challenges.</p>
-            <p><span class="find-start">Cliff-notes</span> from top rated parenting books <span id="find-it">(because who has the time to read the whole thing?)</span></p>
-            <img src="images/penguin3.svg" alt="Penguin Reading A Book">
-            <img src="images/penguin4.svg" alt="Penguin Lifting">
-            <p><span class="find-start">Longer reads</span> for the SuperDads out there</p>
+        <div id="find-total">
+            <div class="find-d">
+                <p><span class="find-start">Low effort activity ideas</span> to suit your mood and budget</p>
+                <img src="images/penguin1.svg" alt="Penguin With Lightbulb">
+            </div>
+            <div class="find-d">
+                <img src="images/penguin2.svg" alt="Frustrated Penguin">
+                <p><span class="find-start">Fast and clear answers</span> to most common parenting challenges.</p>
+            </div>
+            <div class="find-d">
+                <p><span class="find-start">Cliff-notes</span> from top rated parenting books <span id="find-it">(because who has the time to read the whole thing?)</span></p>
+                <img src="images/penguin3.svg" alt="Penguin Reading A Book">
+            </div>
+            <div class="find-d">
+                <img src="images/penguin4.svg" alt="Penguin Lifting">
+                <p><span class="find-start">Longer reads</span> for the SuperDads out there</p>
+            </div>
         </div>
 
         <a href="#" class="button">Sign Up</a>
