--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -49,8 +49,9 @@
                 <p><span class="find-start">Longer reads</span> for the SuperDads out there</p>
             </div>
         </div>
-
-        <a href="#" class="button">Sign Up</a>
+        <div id="button-2">
+            <a href="#" class="button">Sign Up</a>
+        </div>
     </main>
     
     <footer>
