Final footer edits

--- a/intro-to-web-project/index.html
+++ b/intro-to-web-project/index.html
@@ -55,9 +55,9 @@
     </main>
     
     <footer>
-        <h4>Contact Us</h4>
-        <h4>Privacy</h4>
-        <h4>Terms</h4>
+        <a href="#" class="foot">Contact Us</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
     </footer>
 </body>
 </html>
